@@ -42,6 +42,7 @@ public class BoardView implements PositionListener {
 	private MaterialWithData blackSquareMat;
 	private MaterialWithData whiteSquareMat;
 	private MaterialWithData frameMat;
+	private MaterialWithData controlPanelMat;
 	private MaterialWithData enclosureMat;
 	private String pieceStyle;
 	private Boolean isLit;
@@ -175,6 +176,10 @@ public class BoardView implements PositionListener {
 		return frameMat;
 	}
 
+	MaterialWithData getControlPanelMat() {
+		return controlPanelMat == null ? frameMat : controlPanelMat;
+	}
+        
 	MaterialWithData getEnclosureMat() {
 		return enclosureMat;
 	}
@@ -197,6 +202,9 @@ public class BoardView implements PositionListener {
 			blackSquareMat = MaterialWithData.parseIdAndData((String) styleMap.get("black_square"));
 			whiteSquareMat = MaterialWithData.parseIdAndData((String) styleMap.get("white_square"));
 			frameMat = MaterialWithData.parseIdAndData((String) styleMap.get("frame"));
+                        if(styleMap.get("panel") != null){
+                            controlPanelMat = MaterialWithData.parseIdAndData((String) styleMap.get("panel"));
+                        }
 			enclosureMat = MaterialWithData.parseIdAndData((String) styleMap.get("enclosure"));
 		} catch (Exception e) {
 			e.printStackTrace();
@@ -290,7 +298,7 @@ public class BoardView implements PositionListener {
 	// Check if the control panel is present and draw it if necessary
 	// (will be missing if upgrading from v0.1)
 	void checkControlPanel() {
-		if (controlPanel.getPanelBlocks().getUpperSW().getBlock().getTypeId() != frameMat.material) {
+		if (controlPanel.getPanelBlocks().getUpperSW().getBlock().getTypeId() != getControlPanelMat().material) {
 			controlPanel.repaint();
 		}
 	}
